[package]
name = "ccntmractop"
version = "0.1.0"
authors = ["steven <chenglin@cntm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies.cntmio-std]
git="https://github.com/cntmio/cntmology-wasm-cdt-rust"
rev="f4b1b559a46535a7ecdd0aa95aea74a53eed6c38"

[features]
mock = ["cntmio-std/mock"]
