[package]
name = "helloworld"
version = "0.1.0"
authors = ["laizy <laizhichao@cntm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies.cntmio-std]
git="https://github.com/cntmio/cntmology-wasm-cdt-rust"
rev="d78390613ce1c1fd3b34d9e00b47b83a65cfcdf4"

[features]
mock = ["cntmio-std/mock"]
